force-app/main/default/objects/Lead/fields/ai_financial_insights__c.field-meta.xml
<CustomField>
    <fullName>ai_financial_insights__c</fullName>
    <label>ai_financial_insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>