force-app/main/default/objects/Lead/fields/ai_triage_rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>ai_triage_rejection_reason__c</fullName>
    <label>ai_triage_rejection_reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>