force-app/main/default/objects/Lead/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Serpent</fullName>
                <default>true</default>
                <label>Serpent</label>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>MyKnotBook</fullName>
            </value>
            <value>
                <fullName>Neustorm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>