force-app/main/default/objects/Lead/fields/Buy_Signal_Score__c.field-meta.xml
<CustomField>
    <fullName>Buy_Signal_Score__c</fullName>
    <label>Buy Signal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>