force-app/main/default/objects/Lead/fields/MEDDPICC_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Score__c</fullName>
    <label>MEDDPICC Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>