force-app/main/default/objects/Lead/fields/Triage_Passed__c.field-meta.xml
<CustomField>
    <fullName>Triage_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triage Passed</label>
    <type>Checkbox</type>
</CustomField>