force-app/main/default/objects/Lead/listViews/AI_Enriched_Serpent_Leads.listView-meta.xml
<ListView>
    <fullName>AI_Enriched_Serpent_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>ai_icp_alignment_score__c</columns>
    <columns>ai_icp_fit_classification__c</columns>
    <columns>ai_company_pain_points__c</columns>
    <columns>ai_triage_rejection_reason__c</columns>
    <columns>ai_financial_insights__c</columns>
    <columns>ai_growth_insights__c</columns>
    <columns>ai_industry_insights__c</columns>
    <columns>ai_leadership_insights__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ai_enriched__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BusinessUnit__c</field>
        <operation>equals</operation>
        <value>Serpent</value>
    </filters>
    <label>AI Enriched Serpent Leads</label>
</ListView>