force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>LEAD.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>ai_enriched__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Leads</label>
</ListView>