force-app/main/default/objects/Lead/listViews/Neustrom.listView-meta.xml
<ListView>
    <fullName>Neustrom</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>ai_icp_alignment_score__c</columns>
    <columns>ai_icp_fit_classification__c</columns>
    <columns>ai_triage_rejection_reason__c</columns>
    <columns>ai_company_pain_points__c</columns>
    <columns>ai_financial_insights__c</columns>
    <columns>ai_growth_insights__c</columns>
    <columns>ai_industry_insights__c</columns>
    <columns>ai_leadership_insights__c</columns>
    <columns>ai_alignment_explanation__c</columns>
    <columns>ai_economic_buyer_role_fit_score__c</columns>
    <columns>ai_confidence__c</columns>
    <columns>ai_enriched__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BusinessUnit__c</field>
        <operation>equals</operation>
        <value>Neustrom</value>
    </filters>
    <label>Neustrom</label>
</ListView>